{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 732,
  "lineage": "64385680-dc3c-d1ed-2405-0be8d61eb6c2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0293f7675c031aaaa",
            "domain": "vpc",
            "id": "eipalloc-0293f7675c031aaaa",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-127-167-16.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.167.16",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831794387446:internet-gateway/igw-0bfdab1a73cba5530",
            "id": "igw-0bfdab1a73cba5530",
            "owner_id": "831794387446",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-07632e9d22f0fa337"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:831794387446:loadbalancer/app/ecs-alb/485415f5e8345b17",
            "arn_suffix": "app/ecs-alb/485415f5e8345b17",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-alb-987871400.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:831794387446:loadbalancer/app/ecs-alb/485415f5e8345b17",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07511b9d1bc622cbd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01014148d23010c61"
              },
              {
                "subnet_id": "subnet-08ed108521a8c53fb"
              }
            ],
            "subnets": [
              "subnet-01014148d23010c61",
              "subnet-08ed108521a8c53fb"
            ],
            "vpc_id": "vpc-07632e9d22f0fa337",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.load-balancer-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:831794387446:listener/app/ecs-alb/485415f5e8345b17/9ce2aee9f4ec258a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:831794387446:targetgroup/ecs-target-grp/519b9f398f07a548",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:831794387446:listener/app/ecs-alb/485415f5e8345b17/9ce2aee9f4ec258a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:831794387446:loadbalancer/app/ecs-alb/485415f5e8345b17",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs-alb",
            "aws_lb_target_group.ecs-target-grp",
            "aws_security_group.load-balancer-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs-target-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:831794387446:targetgroup/ecs-target-grp/519b9f398f07a548",
            "arn_suffix": "targetgroup/ecs-target-grp/519b9f398f07a548",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:831794387446:targetgroup/ecs-target-grp/519b9f398f07a548",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target-grp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07632e9d22f0fa337"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0293f7675c031aaaa",
            "association_id": "eipassoc-02e374af349a60ece",
            "connectivity_type": "public",
            "id": "nat-01954f41abe8e3262",
            "network_interface_id": "eni-04939ebb48fe9fff1",
            "private_ip": "10.0.0.47",
            "public_ip": "13.127.167.16",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01014148d23010c61",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat-gateway-eip",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831794387446:route-table/rtb-023b0dc3f62f522fb",
            "id": "rtb-023b0dc3f62f522fb",
            "owner_id": "831794387446",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01954f41abe8e3262",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-subnet-rt"
            },
            "tags_all": {
              "Name": "private-subnet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07632e9d22f0fa337"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-gateway-eip",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831794387446:route-table/rtb-0b38c9b5ec5daa096",
            "id": "rtb-0b38c9b5ec5daa096",
            "owner_id": "831794387446",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bfdab1a73cba5530",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-subnet-rt"
            },
            "tags_all": {
              "Name": "public-subnet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07632e9d22f0fa337"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-vpc-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f60cae15e2a27086",
            "route_table_id": "rtb-023b0dc3f62f522fb",
            "subnet_id": "subnet-06edf886e20cc1371"
          },
          "dependencies": [
            "aws_eip.nat-gateway-eip",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064d1eaee101eb61b",
            "route_table_id": "rtb-023b0dc3f62f522fb",
            "subnet_id": "subnet-0552220f879903ad2"
          },
          "dependencies": [
            "aws_eip.nat-gateway-eip",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b57adcc5eee67351",
            "route_table_id": "rtb-0b38c9b5ec5daa096",
            "subnet_id": "subnet-01014148d23010c61"
          },
          "dependencies": [
            "aws_internet_gateway.main-vpc-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00877abbd49f89aa8",
            "route_table_id": "rtb-0b38c9b5ec5daa096",
            "subnet_id": "subnet-08ed108521a8c53fb"
          },
          "dependencies": [
            "aws_internet_gateway.main-vpc-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831794387446:security-group/sg-05c3e6f6688cdb89c",
            "description": "Allow traffic from lb",
            "egress": [],
            "id": "sg-05c3e6f6688cdb89c",
            "ingress": [],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "831794387446",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07632e9d22f0fa337"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load-balancer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831794387446:security-group/sg-07511b9d1bc622cbd",
            "description": "Allow all traffic",
            "egress": [],
            "id": "sg-07511b9d1bc622cbd",
            "ingress": [],
            "name": "load-balancer-sg",
            "name_prefix": "",
            "owner_id": "831794387446",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07632e9d22f0fa337"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs-sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1766346825",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05c3e6f6688cdb89c",
            "security_group_rule_id": "sgr-0b0116d18aa2834c3",
            "self": false,
            "source_security_group_id": "sg-07511b9d1bc622cbd",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs-sg",
            "aws_security_group.load-balancer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs-sg-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1739067385",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05c3e6f6688cdb89c",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load-balancer-sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-80572889",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07511b9d1bc622cbd",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load-balancer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load-balancer-sg-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-291514443",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07511b9d1bc622cbd",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load-balancer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831794387446:subnet/subnet-06edf886e20cc1371",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06edf886e20cc1371",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831794387446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-07632e9d22f0fa337"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831794387446:subnet/subnet-0552220f879903ad2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0552220f879903ad2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831794387446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-07632e9d22f0fa337"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831794387446:subnet/subnet-01014148d23010c61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01014148d23010c61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831794387446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-07632e9d22f0fa337"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831794387446:subnet/subnet-08ed108521a8c53fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ed108521a8c53fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831794387446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-07632e9d22f0fa337"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831794387446:vpc/vpc-07632e9d22f0fa337",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b154fabb0a0b01f6",
            "default_route_table_id": "rtb-02f5489ecd2fcfd20",
            "default_security_group_id": "sg-045f9d7da8a038e00",
            "dhcp_options_id": "dopt-0803115c8a6fabab2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07632e9d22f0fa337",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f5489ecd2fcfd20",
            "owner_id": "831794387446",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}